<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hospital Admin</string>
    <string name="prefs_key">com.sample.hospitaladmin.secret</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="password_hint">Enter the password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false" tools:ignore="Typos">AIzaSyBZZsNlYDk0wG1JXwR25VsVKcj6ZDa55q0</string>
    <string name="name_hint">Enter your name</string>
    <string name="title_activity_home">Map</string>
    <string name="title_activity_test">Map</string>
</resources>